--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 h1{
     font-size: 50px;
 }
-.name-highlight{
+.orange-highlight{
     color: darkorange;
 }
 .half-width{
@@ -27,7 +27,7 @@ h1{
 
 section{
     height: 500px;
-    margin-bottom: 150px;
+    margin-bottom: 200px;
 }
 .link-button{
     text-decoration: none;
@@ -42,14 +42,20 @@ section{
     background-position: right;
 }
 
-.xp{
+.box{
     width: 15%;
     float: left;
-    margin-left: 5%;
+    margin: 2%;
     padding: 2%;
+    height: 50pxs;
+    
    
 }
 .exp{
-    box-shadow:15% 15% 15% gray;
+    border:10px 10px rgb(158, 30, 30);
+}
 
+}
+.Experience{
+    background-color: rgb(240, 121, 121) ;
 }
